.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/SMS_Message_Queue__c.object-meta.xml
<CustomObject>
    <label>SMS Message Queue</label>
    <nameField>
        <displayFormat>QN-{0000}</displayFormat>
        <label>Q Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Message Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>