.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Message Queues</relationshipLabel>
    <relationshipName>SMS_Message_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>