.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>