.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Message_record_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_record_Id__c</fullName>
    <label>Message record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>