.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Recipient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone_Number__c</fullName>
    <label>Recipient Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>