.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <label>Sender</label>
    <length>18</length>
    <type>Text</type>
</CustomField>