.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>