.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&apos;Unknown&apos;</defaultValue>
    <label>Source</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>