.vscode/allianceuat_compare/force-app/main/default/objects/SMS_Message_Queue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>